--- a/.editorconfig
+++ b/.editorconfig
@@ -9,28 +9,26 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-# Spaces in coffee
-[**.coffee]
+[**.{js,jsx,json,coffee}]
 indent_style = space
 indent_size = 2
 
-[**.js]
+[**.{css,scss,sass,less}]
 indent_style = space
 indent_size = 2
 
-# Tabs in less
-[**.less]
-indent_style = tab
-indent_size = 2
-
-[**.css]
-indent_style = tab
+[**.{rb}]
+indent_style = space
 indent_size = 2
 
 [**.php]
 indent_style = space
 indent_size = 4
 
-[**.html]
-indent_style = tab
+[**.{yml,yaml}]
+indent_style = space
 indent_size = 2
+
+[**.{html,htm,erb,twig}]
+indent_style = tab
+indent_size = 4
