--- a/.editorconfig
+++ b/.editorconfig
@@ -29,6 +29,10 @@ indent_size = 4
 indent_style = space
 indent_size = 2
 
+[**.{txt}]
+indent_style = space
+indent_size = 2
+
 [**.{html,htm,erb,twig}]
 indent_style = tab
 indent_size = 4
